refactor: rename green to blue color

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -14,7 +14,7 @@
 
 @layer base {
   th {
-    @apply text-white font-semibold text-center bg-green;
+    @apply text-white font-semibold text-center bg-blue;
   }
 }
 
