style: update padding of the table

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -6,8 +6,8 @@
   table,
   th,
   td {
-    @apply text-textSm p-3;
-    @apply md:text-textMd;
+    @apply text-textSm p-2;
+    @apply md:text-textMd md:p-4;
   }
 }
 
